--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Authors Haven - A Social platform for the creative at heart",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest -u --coverage",
+    "test:watch": "jest --watch",
     "start": "webpack-dev-server --open --hot --mode development",
     "build": "webpack --mode production"
   },
@@ -19,7 +20,10 @@
   },
   "homepage": "https://github.com/andela/ah-frontend-prime#readme",
   "dependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
     "react-redux": "^7.0.3",
+    "react-test-renderer": "^16.8.6",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
@@ -29,6 +33,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.7.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "redux-devtools-extension": "^2.13.8",
