--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "jest -u --coverage",
     "test:watch": "jest --watch",
     "start": "webpack-dev-server --open --hot --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "lint": "eslint . --ignore-path .gitignore",
+    "lint:fix": "eslint . --ignore-path .gitignore --fix"
   },
   "repository": {
     "type": "git",
@@ -33,6 +35,8 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.7.1",
     "node-sass": "^4.12.0",
