--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest -u --coverage",
     "test:watch": "jest --watch",
     "test:coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls",
-    "start": "webpack-dev-server --open --hot --mode development",
+    "start": "webpack-dev-server --open --hot --mode development --https",
     "build": "webpack --mode production",
     "lint": "eslint . --ignore-path .eslintignore",
     "lint:fix": "eslint . --ignore-path .gitignore --fix"
@@ -39,6 +39,8 @@
     "moxios": "^0.4.0",
     "prettier": "^1.17.0",
     "prop-types": "^15.7.2",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.0.4",
     "react-loader": "^2.4.5",
     "react-loader-spinner": "^2.3.0",
     "react-redux": "^7.0.3",
@@ -73,6 +75,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "redux-devtools-extension": "^2.13.8",
+    "redux-mock-store": "^1.5.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
