ft(login): user should be able to login - add user login functionality - add login functionality tests - add login form for inputs - add error and success messages when logging in - add a progress loader
[Finishes #164798253]

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,14 +10,15 @@
   },
   "parserOptions": {
     "ecmaFeatures": {
-    "jsx": true
+      "jsx": true
     },
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": [
-    "react"
-  ],
+  "plugins": ["react"],
   "rules": {
+    "no-unused-vars": "off",
+    "no-undef": "off",
+    "no-console": "off"
   }
 }
