ft(user-registration):users should be register. - add tests for user registration - add validations - add forms for registartion - show validation errors   [Finishes #164798250]

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,9 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": ["react"],
+  "plugins": [
+    "react"
+  ],
   "rules": {
     "no-unused-vars": "off",
     "no-undef": "off",
