--- a/package.json
+++ b/package.json
@@ -31,12 +31,16 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "babel-jest": "^24.8.0",
+    "classnames": "^2.2.6",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "express": "^4.16.4",
     "moment": "^2.24.0",
     "moxios": "^0.4.0",
+    "prettier": "^1.17.0",
+    "prop-types": "^15.7.2",
     "react-loader": "^2.4.5",
+    "react-loader-spinner": "^2.3.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-test-renderer": "^16.8.6",
@@ -47,10 +51,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
     "coveralls": "^3.0.3",
     "css-loader": "^2.1.1",
