--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "babel-jest": "^24.8.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "bootstrap": "^4.3.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "express": "^4.16.4",
+    "file-loader": "^3.0.1",
+    "firebase": "^6.0.2",
     "moment": "^2.24.0",
     "moxios": "^0.4.0",
     "prettier": "^1.17.0",
@@ -50,7 +53,8 @@
     "react-toastify": "^5.1.0",
     "redux": "^4.0.1",
     "redux-mock-store": "^1.5.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "url-loader": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
