--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "babel-jest": "^24.8.0",
+    "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
@@ -67,6 +68,7 @@
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
     "moxios": "^0.4.0",
@@ -78,6 +80,7 @@
     "redux-mock-store": "^1.5.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.3.1"
