--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
+    "axios-mock-adapter": "^1.16.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
     "bootstrap": "^4.3.1",
