--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
+    "jwt-decode": "^2.2.0",
     "moxios": "^0.4.0",
     "node-sass": "^4.12.0",
     "prettier": "^1.17.0",
